// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CPagination renders correctly 1`] = `
<ul
  aria-disabled="false"
  aria-label="pagination"
  class="pagination pagination-md justify-content-start"
  role="menubar"
>
  <li
    class="page-item disabled"
  >
    <a
      aria-disabled="true"
      aria-label="Go to first page"
      class="page-link disabled"
      href="#"
      tabindex="-1"
      target="_self"
    >
      <span>
        «
      </span>
    </a>
  </li>
   
  <li
    class="page-item disabled"
  >
    <a
      aria-disabled="true"
      aria-label="Go to previous page"
      class="page-link disabled"
      href="#"
      tabindex="-1"
      target="_self"
    >
      <span>
        ‹
      </span>
    </a>
  </li>
   
  <!---->
   
  <li
    class="active page-item"
  >
    <a
      aria-label="Go to page 1"
      class="page-link"
      href="#"
      target="_self"
    >
      
      1
    
    </a>
  </li>
  <li
    class="page-item"
  >
    <a
      aria-label="Go to page 2"
      class="page-link"
      href="#"
      target="_self"
    >
      
      2
    
    </a>
  </li>
  <li
    class="page-item"
  >
    <a
      aria-label="Go to page 3"
      class="page-link"
      href="#"
      target="_self"
    >
      
      3
    
    </a>
  </li>
  <li
    class="page-item"
  >
    <a
      aria-label="Go to page 4"
      class="page-link"
      href="#"
      target="_self"
    >
      
      4
    
    </a>
  </li>
   
  <li
    class="page-item disabled"
    role="separator"
  >
    <span
      class="page-link"
    >
      …
    </span>
  </li>
   
  <li
    class="page-item"
  >
    <a
      aria-label="Go to next page"
      class="page-link"
      href="#"
      target="_self"
    >
      <span>
        ›
      </span>
    </a>
  </li>
   
  <li
    class="page-item"
  >
    <a
      aria-label="Go to last page"
      class="page-link"
      href="#"
      target="_self"
    >
      <span>
        »
      </span>
    </a>
  </li>
</ul>
`;

exports[`CPagination renders correctly 2`] = `
<ul
  aria-disabled="false"
  aria-label="pagination"
  class="pagination pagination-lg justify-content-center"
  role="menubar"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <li
    class="page-item"
  >
    <a
      aria-label="Go to page 6"
      class="page-link"
      href="#"
      target="_self"
    >
      
      6
    
    </a>
  </li>
  <li
    class="page-item"
  >
    <a
      aria-label="Go to page 7"
      class="page-link"
      href="#"
      target="_self"
    >
      
      7
    
    </a>
  </li>
  <li
    class="page-item"
  >
    <a
      aria-label="Go to page 8"
      class="page-link"
      href="#"
      target="_self"
    >
      
      8
    
    </a>
  </li>
  <li
    class="active page-item"
  >
    <a
      aria-label="Go to page 9"
      class="page-link"
      href="#"
      target="_self"
    >
      
      9
    
    </a>
  </li>
  <li
    class="page-item"
  >
    <a
      aria-label="Go to page 10"
      class="page-link"
      href="#"
      target="_self"
    >
      
      10
    
    </a>
  </li>
  <li
    class="page-item"
  >
    <a
      aria-label="Go to page 11"
      class="page-link"
      href="#"
      target="_self"
    >
      
      11
    
    </a>
  </li>
  <li
    class="page-item"
  >
    <a
      aria-label="Go to page 12"
      class="page-link"
      href="#"
      target="_self"
    >
      
      12
    
    </a>
  </li>
   
  <!---->
   
  <!---->
   
  <!---->
</ul>
`;
